@@ -46,7 +46,7 @@ public class OverridesOnePointFour {
 		
     @Override
     public Long get() {
-			return new Long(6);
+			return Long.valueOf(6);
 		}
 	}
 
