@@ -632,7 +632,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
       Map<Integer, ConstantValue> constants = null;
       if (valueNumberForConstantOne > -1) {
         constants = HashMapFactory.make(1);
-        constants.put(new Integer(valueNumberForConstantOne), new ConstantValue(new Integer(1)));
+        constants.put(Integer.valueOf(valueNumberForConstantOne), new ConstantValue(Integer.valueOf(1)));
       }
 
       return new SyntheticIR(this, context, new InducedCFG(instrs, this, context), instrs, options, constants);
